fixed visible menu button on large screens

--- a/common/css/base/_working-area.sass
+++ b/common/css/base/_working-area.sass
@@ -92,8 +92,8 @@
     padding: 16px 0
 
 @media (min-width: $two-column-min)
-  .menu-button
-    display: none
+  .menu-button-container
+    display: none !important
 
 @media (min-width: $two-column-min) and (max-width: $two-column-max)
   .working-area__structure,
